# fastapi-template

./: .env.example  .gitlab-ci.yml  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  cookiecutter.json  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
hooks/: post_gen_project.py  pre_gen_project.py
migrations/: env.py  script.py.mako
migrations/versions/: 0001_initial_users_table.py
setup_project/: __init__.py  cli.py  config.py  updaters.py
src/: config.py
src/core/: asgi.py  http.py
src/core/api/: __init__.py
src/core/dependencies/: utils.py
src/core/middleware/: __init__.py
src/modules/users/: dto.py  routers.py  services.py
tests/: conftest.py
tests/mimic/: session.py
tests/unit/modules/users/: test_repositories.py
{{ cookiecutter.project_slug }}/: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  Makefile  README.md  conftest.py  pyproject.toml
{{ cookiecutter.project_slug }}/.github/workflows/: ci.yml
{{ cookiecutter.project_slug }}/scripts/: entrypoint.sh
{{ cookiecutter.project_slug }}/src/: config.py
{{ cookiecutter.project_slug }}/src/core/: exceptions.py
{{ cookiecutter.project_slug }}/src/core/api/: routers.py
{{ cookiecutter.project_slug }}/src/core/dependencies/: containers.py
{{ cookiecutter.project_slug }}/src/core/middleware/: rate_limit.py  request_id.py
{{ cookiecutter.project_slug }}/src/core/types/: dto.py  repositories.py  singleton.py
{{ cookiecutter.project_slug }}/src/db/: __init__.py  base.py  session.py
{{ cookiecutter.project_slug }}/src/modules/users/: __init__.py  models.py  repositories.py
{{ cookiecutter.project_slug }}/tests/integration/: test_db.py  test_health.py  test_routers.py  test_session.py
{{ cookiecutter.project_slug }}/tests/unit/modules/users/: test_routers.py  test_services.py
